# exampulse

./: .env.example  .gitignore  LICENSE  README.md  project-progress.md  pyproject.toml  status.ps1  status.sh
.github/workflows/: ci.yml
app/: __init__.py
app/cli/: main.py
app/cli/views/: common.py  correlate_view.py  plan_view.py  report_view.py  today_view.py  week_view.py  whoop_views.py
app/core/: __init__.py  analysis.py  config.py  correlation.py  exam_hr.py  models.py  night_hr.py  planning.py  scoring.py  selectors.py  stress.py
app/integrations/: whoop_client.py  whoop_oauth.py
app/research/: __init__.py
app/research/raw_hr/: __init__.py  service.py
app/services/: apple_health_service.py  demo_seed_service.py  exam_service.py  export_service.py  ics_parser.py  insight_service.py  semester_service.py  sync_service.py  whoop_export_service.py  whoop_raw_check_service.py
app/storage/: db.py  repositories.py
app/utils/: formatters.py  terminal_ui.py  time.py
tests/: conftest.py  test_analysis.py  test_apple_health.py  test_config.py  test_correlation.py  test_db.py  test_demo_seed.py  test_exam_import.py  test_ics_import.py  test_insight_service.py  test_night_hr.py  test_planning.py  test_research_raw_hr.py  test_scoring_properties.py  test_semester_report.py  test_sleep_streams.py  test_stream_diagnostics.py  test_stress.py  test_terminal_ui.py  test_today_command.py  test_whoop_client.py  test_whoop_export.py  test_whoop_raw_check.py
