[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "exampulse"
version = "0.2.0"
description = "CLI-first WHOOP exam readiness analyzer"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "apscheduler>=3.10.4",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.1",
  "rich>=13.7.1",
  "sqlmodel>=0.0.22",
  "typer>=0.12.3",
]

[project.optional-dependencies]
dev = [
  "hypothesis>=6.100",
  "mypy>=1.10",
  "pytest>=8.2.0",
  "ruff>=0.6.0",
]

[project.scripts]
exampulse = "app.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP", "B", "SIM", "C4", "RET", "PIE"]
# typer expects Option()/Argument() calls as parameter defaults.
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true
